docs: refactor guides with presets

--- a/src/docs/guides/general/concepts.en-US.mdx
+++ b/src/docs/guides/general/concepts.en-US.mdx
@@ -30,6 +30,12 @@ You can combine Univer's plugins to customize a Univer application that meets yo
 1. [Write a CSV import plugin](/guides/sheet/tutorials/csv-import-plugin) to learn how to write a plugin.
 2. [Univer Architecture](/guides/sheet/architecture/univer) to learn more about Univer's architecture design.
 
+## Presets
+
+We provide some presets that combine multiple plugins to meet common requirements. You can use presets directly to quickly build a Univer application that meets your requirements. 
+
+### Related Links
+
 ## Snapshot
 
 You need to load a snapshot in Univer to load a document. Each type of document provides its own snapshot format. Please refer to the above API documentation to learn how to write a snapshot that meets the format requirements:
