--- a/src/docs/guides/general/introduction.en-US.mdx
+++ b/src/docs/guides/general/introduction.en-US.mdx
@@ -8,14 +8,17 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 Univer provides a comprehensive enterprise-level solution for document and data collaboration, supporting three core document types: [**spreadsheets**](/guides/sheet/introduction), [**documents**](/guides/doc/introduction), and [**slides**](/guides/slide/introduction). Through a flexible API and plugin mechanism, developers can customize and extend personalized features on Univer to meet the specific needs of different users in various scenarios.
 
 export const features = [{
-  title: '🚀 High Performance',
-  description: 'Univer uses a rendering engine based on Canvas and a formula engine that supports Web Worker, ensuring high performance on large-scale data rendering and processing.'
-}, {
   title: '🧩 Plugin-based',
   description: 'The core functionality and capabilities of Univer are provided through plugins, allowing developers to freely combine the required functionality or create custom plugins to extend Univer.'
 }, {
+  title: '🧙‍♀️ Isomorphic',
+  description: 'Univer can run both on browsers and Node.js, with the exactly same API. Write once, run everywhere.',
+}, {
   title: '🪄 Customizable',
   description: 'Developers can customize the appearance and interaction of Univer by importing custom themes, icons, component libraries, etc.'
+}, {
+  title: '🚀 High Performance',
+  description: 'Univer uses a rendering engine based on Canvas and a formula engine that supports Web Worker, ensuring high performance on large-scale data rendering and processing.'
 }, {
   title: '🌍 Internationalization',
   description: 'Supports multiple languages, allowing developers to freely switch languages and customize language packs.'
@@ -39,6 +42,10 @@ export const features = [{
 ## Highlights
 
 <FeatureBox features={features} />
+
+## Getting Started
+
+Bootstrap Univer in 5 minutes. Start from [here](/guides/sheet/getting-started/quickstart).
 
 ## Features
 
