--- a/src/docs/guides/general/introduction.zh-CN.mdx
+++ b/src/docs/guides/general/introduction.zh-CN.mdx
@@ -8,14 +8,17 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 Univer 提供了一个全面的企业级文档与数据协同的解决方案，支持[**电子表格**](/guides/sheet/introduction)、[**文本文档**](/guides/doc/introduction)和[**演示幻灯片**](/guides/slide/introduction)三大核心文档类型。通过灵活的 API 和插件机制，开发者可以在 Univer 的基础上进行个性化功能的定制和扩展，以适应不同用户在不同场景下的特定需求。
 
 export const features = [{
-  title: '🚀 高性能',
-  description: '基于 Canvas 的渲染引擎和公式引擎，支持 Web Worker，保证了高性能的同时，也能够支持大规模的数据处理。'
-}, {
   title: '🧩 插件化',
   description: 'Univer 的核心功能和能力都是通过插件的方式提供的，开发者可以自由组合所需功能或扩展自定义插件。'
 }, {
+  title: '🧙‍♀️ 多端同构',
+  description: 'Univer 可以在浏览器和 Node.js 上运行，提供完全相同的 API。一次编写，随处运行。',
+}, {
   title: '🪄 可定制',
   description: '通过导入自定义主题、图标、组件库等方式，开发者可以定制化 Univer 的外观和交互。'
+}, {
+  title: '🚀 高性能',
+  description: '基于 Canvas 的渲染引擎和公式引擎，支持 Web Worker，保证了高性能的同时，也能够支持大规模的数据处理。'
 }, {
   title: '🌍 国际化',
   description: '支持多语言，开发者可以自由切换语言，也可以自定义语言包。'
