--- a/src/docs/guides/sheet/getting-started/i18n.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/i18n.zh-CN.mdx
@@ -5,76 +5,29 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 <BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC, UniverTypes.SLIDE]} value={UniverTypes.SHEET} />
 
-## 使用预设语言包
+<Callout>
+  如果你不使用 Preset，请参考 [高级引入/国际化]()。
+</Callout>
 
-0.1.13 版本后，Univer 不再内置任何语言包，所有语言包均由插件提供。如果你发现手动引入插件的语言包过于繁琐，我们还提供了一个构建工具插件，用于自动引入插件所需的语言包。请参考 [使用 Univer 插件](/guides/sheet/advanced/univer-plugins) 获取更多信息。
+## 使用 Presets 语言包
 
-如需手动添加语言包，你可以参考以下示例，根据需要引入对应的语言包并组装成对象传入 `Univer` 实例：
+需要引入你所使用的 Preset 对应的语言包：
 
-```typescript
-import { LocaleType, Tools } from '@univerjs/core';
-import DesignZhCN from '@univerjs/design/locale/zh-CN';
-import UIZhCN from '@univerjs/ui/locale/zh-CN';
-import DocsUIZhCN from '@univerjs/docs-ui/locale/zh-CN';
-import SheetsZhCN from '@univerjs/sheets/locale/zh-CN';
-import SheetsUIZhCN from '@univerjs/sheets-ui/locale/zh-CN';
-import SheetsFormulaUIZhCN from '@univerjs/sheets-formula-ui/locale/zh-CN';
+```ts
+import { defaultTheme } from '@univerjs/design';
+import { createUniver, LocaleType } from '@univerjs/presets';
+import { UniverSheetsAdvancedPreset } from '@univerjs/presets/sheets/sheets-advanced-features/index';
+import { zhCN as advancedZhCN } from '@univerjs/presets/sheets/sheets-advanced-features/zh-CN';
+import { UniverSheetsBasicPreset } from '@univerjs/presets/sheets/sheets-basic/index';
+import { zhCN as basicZhCN } from '@univerjs/presets/sheets/sheets-basic/zh-CN';
 
-const univer = new Univer({
-  theme: defaultTheme,
-  locale: LocaleType.ZH_CN,
-  locales: {
-    [LocaleType.ZH_CN]: Tools.deepMerge(
-      SheetsZhCN,
-      DocsUIZhCN,
-      SheetsUIZhCN,
-      SheetsFormulaUIZhCN,
-      UIZhCN,
-      DesignZhCN,
-    ),
-  },
-});
-```
-
-Univer 目前内置了以下预设语言包：
-
-- `zh-CN`：简体中文
-- `en-US`：英文
-- `ru-RU`：俄文
-
-需要注意的是，由于 Webpack 4 并不支持 package.json 的 `exports` 字段，因此你可能会需要修改引入语言包的路径。
-
-```diff
-- import DesignZhCN from '@univerjs/design/locale/zh-CN';
-+ import DesignZhCN from '@univerjs/design/lib/locale/zh-CN.json'
-```
-
-如果你使用了 TypeScript，也需要确认是否在 tsconfig.json 中配置了 `resolveJsonModule` 选项。
-
-```diff
-{
-  "compilerOptions": {
-+    "resolveJsonModule": true
-  }
-}
-```
-
-## 使用自定义语言包
-
-Univer 也支持自定义语言包，你可以根据需要自行组装语言包对象并传入 `Univer` 实例。可供参考的预设语言包一般存放在 `<rootDir>/packages/<PLUGIN_NAME>/locale` 目录下。
-
-```typescript
-const univer = new Univer({
-  theme: defaultTheme,
-  locale: 'es-ES',
-  locales: {
-    'es-ES': {
-      shortcut: {
-        undo: 'Deshacer',
-        redo: 'Rehacer',
-      }
-    },
-  },
+const { univerAPI } = createUniver({
+    locale: LocaleType.ZH_CN,
+    theme: defaultTheme,
+    presets: [
+        UniverSheetsBasicPreset({ locales: { zhCN: basicZhCN } }),
+        UniverSheetsAdvancedPreset({ locales: { zhCN: advancedZhCN }),
+    ],
 });
 ```
 
