--- a/src/docs/guides/sheet/roadmap.zh-CN.mdx
+++ b/src/docs/guides/sheet/roadmap.zh-CN.mdx
@@ -6,72 +6,58 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 <BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC, UniverTypes.SLIDE]} value={UniverTypes.SHEET} />
 
-<Callout type="info" emoji="ℹ️">
-  Univer Sheet 核心功能已经开发完成，但仍有部分功能性插件尚未完善。
-</Callout>
-
 你可以通过 Feature Request 向我们提交需求，请参考[贡献指南](/guides/sheet/contributing)，我们会结合社区的反馈调整开发计划。
 
 export const data = [
   {
-    start: '2023/09',
-    end: '2023/12',
-    name: '✅ 核心功能',
+    start: '2024/10',
+    end: '2024/10',
+    name: '✅ 展示隐藏网格线'
   },
   {
-    start: '2024/02',
-    end: '2024/03',
-    name: '✅ 查找替换',
+    start: '2024/10',
+    end: '2024/10',
+    name: '✅ 水印'
   },
   {
-    start: '2024/02',
-    end: '2024/04',
-    name: '✅ 条件格式',
+    start: '2024/10',
+    end: '2024/10',
+    name: '✅ 自动列宽'
   },
   {
-    start: '2024/01',
-    end: '2024/04',
-    name: '✅ 数据验证',
+    start: '2024/10',
+    end: '2024/12',
+    name: '图表与迷你图'
   },
   {
-    start: '2024/03',
-    end: '2024/05',
-    name: '✅ 浮动图片',
+    start: '2024/11',
+    end: '2024/12',
+    name: '单元格图片'
   },
   {
-    start: '2024/04',
-    end: '2024/06',
-    name: '✅ 保护区域（子表和范围权限控制）',
+    start: '2024/11',
+    end: '2024/12',
+    name: '筛选与年月日聚合'
   },
   {
-    start: '2024/03',
-    end: '2024/04',
-    name: '✅ 筛选',
+    start: '2024/11',
+    end: '2024/12',
+    name: '转置粘贴'
   },
   {
-    start: '2024/04',
-    end: '2024/05',
-    name: '✅ 批注',
+    start: '2024/12',
+    end: '2024/12',
+    name: '通知和提及'
   },
   {
-    start: '2024/01',
-    end: '2024/09',
-    name: '🏃 更多的公式',
+    start: '2024/12',
+    end: '2024/12',
+    name: '智能分列'
   },
-  {
-    start: '2024/05',
-    end: '2024/06',
-    name: '✅ 排序',
-  },
-  {
-    start: '2024/01',
-    end: '2024/02',
-    name: '✅ 打印'
-  },
-  {
-    start: '2024/01',
-    end: '2024/03',
-    name: '✅ 导入导出'
+    {
+    start: '2024/12',
+    end: '2025/1',
+    name: '切片器'
   }
 ]
 
