--- a/src/docs/guides/sheet/features/gridlines.en-US.mdx
+++ b/src/docs/guides/sheet/features/gridlines.en-US.mdx
@@ -11,4 +11,4 @@ import entryFile from './gridlines/demo-1/index.txt'
 
 <Sandbox entryFile={entryFile} />
 
-From version 0.5.0, you can toggle the visiblity of a Workbook's gridlines.
+From version 0.4.2, you can toggle the visiblity of a Worksheet's gridlines.
