docs: add univer on node doc

--- a/src/docs/guides/sheet/getting-started/presets.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/presets.zh-CN.mdx
@@ -91,9 +91,9 @@ createUniver({
 
 在线例子
 
-## 运行在 Node.js 当中的无头电子表格
+## 运行在 Node.js 当中的 Univer 
 
-由于 Univer 的
+请移步 [“在 Node.js 上运行 Univer”](/guides/sheet/getting-started/node)。
 
 ## 在以上 Presets 中启用 Web Worker
 
