--- a/src/docs/guides/sheet/advanced/advanced-installation.zh-CN.mdx
+++ b/src/docs/guides/sheet/advanced/advanced-installation.zh-CN.mdx
@@ -2,12 +2,12 @@ import { Callout, Tabs } from 'nextra/components'
 import ReactLive from '@/components/ReactLive'
 import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
-# 高级安装和引入
+# 高级引入方式
 
 <BadgeGroup values={[UniverTypes.SHEET, UniverTypes.DOC, UniverTypes.SLIDE]} value={UniverTypes.SHEET} />
 
 <Callout>
-  从这开始，在 “开始使用” 一章的剩余部分我们将会假设你不再使用 `@univerjs/presets`，而是手动引入和配置 Univer 插件。如果你是首次使用 Univer，我们推荐从 [“安装和基本使用”](/guides/sheet/getting-started/installation) 开始。
+  这篇文档中，我们不再假设你使用 Presets，而是手动引入和配置插件。如果你是首次使用 Univer，推荐从 [“安装和基本使用”](/guides/sheet/getting-started/installation) 开始。
 </Callout>
 
 ## 使用包管理器
