--- a/src/docs/guides/sheet/getting-started/installation.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/installation.zh-CN.mdx
@@ -9,7 +9,7 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 Univer 从 0.5.0 版本起提供了 `@univerjs/presets` 包，它针对一些常见场景提供了预设的配置，可以帮助你快速地搭建一个 Univer 应用而无需关心如何引入和配置 Univer 插件。
 
 <Callout>
-  如果你是首次使用 Univer，我们推荐从 `@univerjs/presets` 开始。在后续的小节中，除非特殊说明，我们都会假设你使用了 Presets。如果你已经较为熟悉 Univer，并且希望更加灵活地引入插件（例如懒加载部分插件），可以参考 [高级安装和引入](/guides/sheet/advanced/installation)。
+  如果你是首次使用 Univer，我们推荐从 `@univerjs/presets` 开始。在后续的小节中，除非特殊说明，我们都会假设你使用了 Presets。如果你已经较为熟悉 Univer，并且希望更加灵活地引入插件（例如懒加载部分插件），可以参考 [高级引入方式](/guides/sheet/advanced/installation)。
 </Callout>
 
 ## 使用包管理器
@@ -262,7 +262,8 @@ const savedData = univerAPI.getActiveWorkbook().save();
 
 ## 了解更多
 
-* 在 [基础概念](/guides/sheets/getting-started/concepts) 章节了解本章中出现的插件、命令和 Facade API 等概念。
+* 在 [基础概念](/guides/sheet/getting-started/concepts) 章节了解本章中出现的插件、命令和 Facade API 等概念。
+* 在 [Presets](/guides/sheet/getting-started/presets) 章节了解 Univer 官方提供的所有 Presets。
 
 [^1]: https://blog.npmjs.org/post/110924823920/npm-weekly-5
 [^2]: https://pnpm.io/npmrc#auto-install-peers
