--- a/src/docs/guides/sheet/getting-started/node.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/node.zh-CN.mdx
@@ -4,7 +4,7 @@ import { Callout } from 'nextra/components'
 
 Univer 的同构特性使得它不仅可以在浏览器中运行，并且可以在 Node.js 上运行 🎉。你可以基于 Univer on Node 开发数据处理服务，在服务器端生成电子表格，或执行电子表格的公式、透视表等运算，并通过熟悉的 Facade API 和 Univer 交互，而这一切仅需要调整所加载的插件。
 
-## 通过 Presets 加载 Univer on Node
+## Presets
 
 如果你使用 Presets 加载 Univer on Node，可参考如下代码：
 
@@ -28,7 +28,7 @@ run();
 
 [案例仓库]()
 
-## 通过高级方式引入 Univer on Node
+## 高级引入方式
 
 可参考如下代码启动 Univer on Node：
 
