feat(sheet): add default styl;e document

--- a/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.en-US.mdx
@@ -163,6 +163,8 @@ univerAPI.executeCommand(SetWorksheetActiveOperation.id, { unitId: workbookId, s
 
 ## Core Features
 
+### [Default Style](/guides/sheet/features/core/default-style)
+
 ### [Permission](/guides/sheet/features/core/permission)
 
 ### [Formula](/guides/sheet/features/core/formula)
