--- a/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/sheet-api.zh-CN.mdx
@@ -165,6 +165,8 @@ univerAPI.executeCommand(SetWorksheetActiveOperation.id, { unitId: workbookId, s
 
 ## 核心功能
 
+### [默认工作表样式](/guides/sheet/features/core/default-style)
+
 ### [权限控制](/guides/sheet/features/core/permission)
 
 ### [公式](/guides/sheet/features/core/formula)
