--- a/src/docs/guides/sheet/getting-started/workbook-data.en-US.mdx
+++ b/src/docs/guides/sheet/getting-started/workbook-data.en-US.mdx
@@ -23,6 +23,7 @@ IWorkbookData is the object used to store data in univer-sheet. It is mainly use
 | sheetOrder | `string[]` | Array of sheet IDs representing the order of worksheets. |
 | sheets | `{ [sheetId: string]: Partial<IWorksheetData> }` | Record containing data for each worksheet. |
 | resources? | `IResources` | Optional resources for other plugins. |
+| defaultStyle | `Nullable<IStyleData>` | The default style of worksheet|
 
 ### Example
 
