--- a/src/docs/guides/sheet/getting-started/workbook-data.zh-CN.mdx
+++ b/src/docs/guides/sheet/getting-started/workbook-data.zh-CN.mdx
@@ -66,6 +66,7 @@ IWorkbookData 是 univer-sheet 存储数据的对象。主要用于
 | columnHeader | `{ height: number; hidden?: BooleanNumber; }` | 列标题配置。 |
 | showGridlines | `BooleanNumber` | 是否显示网格线。 |
 | rightToLeft | `BooleanNumber` | 工作表是否为从右到左模式。 |
+| defaultStyle | `Nullable<IStyleData>` | 默认工作表样式 |
 
 ### 示例
 
