--- a/src/docs/guides/sheet/features/core/default-style-US.mdx
+++ b/src/docs/guides/sheet/features/core/default-style-US.mdx
@@ -5,11 +5,12 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 <BadgeGroup values={[UniverTypes.SHEET]} value={UniverTypes.SHEET} />
 
 We provide two levels of default styles: the default style of the worksheet and the default style of the column or row.
-Both can be set through the `IWorksheetData` interface or the facade API.
+Both can be set through the `IWorksheetData` interface or the Facade API.
+
+### Configuration
 
 By default, the column style takes precedence over the row style. You can change this behavior by setting `isRowStylePrecedeColumnStyle` during registration.
 
-You can set whether row styles take precedence over column styles by setting `isRowStylePrecedeColumnStyle` during registration.
 
 ```typescript
   univer.registerPlugin(UniverSheetsPlugin, {
@@ -24,7 +25,7 @@ There are two ways to set the default style of a worksheet:
     interface IWorksheetData{
         // other
         /**
-         * @property {Nullable<IStyleData>} [defaultStyle] - Default style id or style data of Worksheet.
+         * @property {Nullable<IStyleData>} [defaultStyle] - Default style data of Worksheet.
          */
         defaultStyle?: Nullable<IStyleData>;
 
@@ -33,7 +34,7 @@ There are two ways to set the default style of a worksheet:
     interface IRowData{
         // other
         /**
-         * style id
+         * style data
          */
         s?: Nullable<IStyleData>;
     }
@@ -41,12 +42,12 @@ There are two ways to set the default style of a worksheet:
     interface IColumnData{
      // other
      /**
-     * style id
+     * style data
      */
     s?: Nullable<IStyleData>;
 }
 ```
-2. Set through the facade API
+2. Set through the Facade API
 
 ```typescript
   const fworkbook = univerAPI.getActiveWorkbook()
