--- a/src/docs/guides/sheet/facade/dom.zh-CN.mdx
+++ b/src/docs/guides/sheet/facade/dom.zh-CN.mdx
@@ -98,16 +98,21 @@ const componentManager = injector.get(ComponentManager);
 // 你应该在合适的时机（比如univer加载完成）注册组件
 componentManager.register(
   'myPopup',
-  () => <div style={{ width: 100, height: 100, background: '#fff' }}>弹出内容</div>
+  ({ popup }) => <div style={{ width: 100, height: 100, background: '#fff' }}>弹出内容 {popup.extraProps.label}</div>,
+  // 如果组件是React组件，需要设置框架为'react'
+  // 如果组件是Vue3组件，需要设置框架为'vue3'
+  { framework: 'react' }
 );
 
 // 将弹出窗口附加到范围的第一个单元格
 // 如果 disposeable 为 null，则表示 popup 添加失败
 const disposeable = range.attachPopup({
   // componentKey 必须是一个组件或已注册组件的键
-    componentKey: myPopup,
-    // 如果 componentKey 是一个 Vue3 组件，必须将 isVue3 设置为 true
-    // isVue3: true,
+    componentKey: 'myPopup',
+    // 这是组件的数据, 可以传递给组件
+    extraProps: {
+      label: 'hahah',
+    },
 });
 
 // 移除弹出框
